src/human_study/program_12/python_err_msg.txt
File "./seq2parse/human_study/program_12/original.py", line 5
    if s % a != 0 and s % b != 0
                                ^
SyntaxError: expected ':'
